--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,5 @@
-#server:
-#  port: 8761
-#
-#spring:
-#  application:
-#    name: discovery-service
-#
-#eureka:
-#  instance:
-#    hostname: localhost
-#  client:
-#    registerWithEureka: false
-#    fetchRegistry: false
-#    serviceUrl:
-#      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
-
 server:
   port: 8761
-  address: 0.0.0.0  # Allows external access
 
 spring:
   application:
@@ -24,9 +7,31 @@ spring:
 
 eureka:
   instance:
-    hostname: ${HOSTNAME}  # Uses pod hostname (e.g., eureka-0)
+    hostname: localhost
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
+
+management:
+  metrics:
+    binders:
+      processor:
+        enabled: false
+#server:
+#  port: 8761
+#  address: 0.0.0.0  # Allows external access
+#
+#spring:
+#  application:
+#    name: discovery-service
+#
+#eureka:
+#  instance:
+#    hostname: ${HOSTNAME}  # Uses pod hostname (e.g., eureka-0)
+#  client:
+#    registerWithEureka: false
+#    fetchRegistry: false
+#    serviceUrl:
+#      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
